--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -434,7 +434,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -446,7 +446,7 @@ a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"],
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150c 'motes */
-a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"]
+a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"], a[href|="/nothisisbait"]
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -487,7 +487,7 @@ a[href|="/twidorable"], a[href|="/nerdcheese"], a[href|="/50scoco"], a[href|="/5
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Misfits f */
-a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"], a[href|="/imagination"], a[href|="/redheartbutt"], a[href|="/fluttershibe"], a[href|="/graceful"], a[href|="/applejaguar"], a[href|="/happynurse"], a[href|="/curiousredheart"], a[href|="/discordsquee"], a[href|="/glassesdash"], a[href|="/casualdash"], a[href|="/applejackderp"], a[href|="/fusroyay"], a[href|="/flutterborn"], a[href|="/discentiabored"], a[href|="/discentiagone"]
+a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[href|="/flashsentry"], a[href|="/medicredheart"], a[href|="/imagination"], a[href|="/redheartbutt"], a[href|="/fluttershibe"], a[href|="/graceful"], a[href|="/applejaguar"], a[href|="/happynurse"], a[href|="/curiousredheart"], a[href|="/discordsquee"], a[href|="/glassesdash"], a[href|="/casualdash"], a[href|="/applejackderp"], a[href|="/fusroyay"], a[href|="/flutterborn"], a[href|="/discentiabored"], a[href|="/discentiagone"], a[href|="/dontbeabutt"]
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -541,7 +541,7 @@ a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocoha
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
-a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"]
+a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"], a[href|="/nerdpinkamena"], a[href|="/raracheeks"], a[href|="/nothisisbait"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
@@ -597,15 +597,15 @@ a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"]
 {background-position: -100% -800%;}
 
 /* Grid pos 2,8 'motes */
-a[href|="/shibemena"], a[href|="/rdtwistare"]
+a[href|="/shibemena"], a[href|="/rdtwistare"], a[href|="/firefox"]
 {background-position: -200% -800%;}
 
 /* Grid pos 0,9 'motes */
-a[href|="/shibepie"], a[href|="/rdtwiponder"]
+a[href|="/shibepie"], a[href|="/rdtwiponder"], a[href|="/derpyhasmuffin"]
 {background-position: -0% -900%;}
 
 /* Grid pos 1,9 'motes */
-a[href|="/shibeluna"], a[href|="/twilightstare"]
+a[href|="/shibeluna"], a[href|="/twilightstare"], a[href|="/raraglee"]
 {background-position: -100% -900%;}
 
 /* Grid pos 2,9 'motes */
@@ -888,3 +888,4 @@ a[href|="/fusroyay"] {width:150px;height:123px;background-position: -195px -404p
 a[href|="/flutterborn"] {width:150px;height:126px;background-position: -200px -527px;}
 a[href|="/discentiabored"] {width:108px;height:114px;background-position: -592px -326px;margin-bottom:-12px;position:relative;z-index:2147483647;}
 a[href|="/discentiagone"] {width:137px;height:122px;background-position: -455px -325px;}
+a[href|="/dontbeabutt"] {width:200px;height:151px;background-position: -347px -446px;}
