--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -173,6 +173,9 @@ html:lang(nv) .side p a[href="http://nv.reddit.com/r/TheBestPony/"] {
 .flair-wing {
     background-position: 0px -144px
     }
+.flair-ils {
+    background-position: 0px -160px
+    }
 /*********
 *usernames*
 *********/
