--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -35,6 +35,7 @@ a[href|="/lunarainbowbarf"], a[href|="/lunabarf"] {background-image: url(%%lunar
 a[href|="/walkingabout"] {background-image: url(%%walkingabout%%);width:200px;height:156px;display:block;float:left;}
 a[href|="/rainbowdansen"] {background-image: url(%%rainbowdansen%%);width:165px;height:200px;display:block;float:left;}
 a[href|="/megameh"] {background-image: url(%%megameh%%);width:230px;height:194px;display:block;float:left;}
+a[href|="/pinkiefedora"] {background-image: url(%%pinkiefedora%%);width:200px;height:115px;display:block;float:left;}
 
 /*
  ************
