--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,3 +1,43 @@
+a[href^="/lbclop"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 72px;
+    height: 72px;
+    background-image: url(%%lbclop%%)
+    }
+
+a[href^="/lbclop"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 72px;
+    height: 72px;
+    background-image: url(%%lbclop%%)
+    }
+
+a[href^="/lbshortvideo"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 174px;
+    height: 140px;
+    background-image: url(%%lbshortvideo%%)
+    }
+
+a[href^="/RDGEDDAN"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 183px;
+    height: 140px;
+    background-image: url(%%RDGEDDAN%%)
+    }
+
 a[href^="/deepcelewave"] {
     background-position: 0px 0px;
     display: block;
@@ -190,7 +230,7 @@ a[href^="/gottaspinfast"] {
     }
 
 
-a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"]
+a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"]
 
  {
     display: block;
@@ -236,4 +276,9 @@ a[href|="/talltwi"] {
     width: 93px;
     height: 140px;
     background-position: -140px -210px
+    }
+a[href|="/lbsalute"] {
+    width: 165px;
+    height: 140px;
+    background-position: -233px -210px
     }
