Stylesheet/emote/tag updates 2014-06-14

--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -1,7 +1,7 @@
 /*** Emotes ***/
 
 /* 100 by 100 */
-a[href="/ajcheersghost"], a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/applejackfillyghost"], a[href="/bonghost"], a[href="/flutterghost"], a[href="/lyraghost"], a[href="/pinkiefillyghost"], a[href="/pinkieghost"], a[href="/ppsoawesomeghost"], a[href="/raracheeksghost"], a[href="/rarghost"], a[href="/rarisoawesomeghost"], a[href="/rdsoawesomeghost"], a[href="/roseghost"], a[href="/shysoawesomeghost"], a[href="/sweetieghost"], a[href="/twigringhost"], a[href="/twilightfillyghost"], a[href="/twishockedghost"], a[href="/twisoawesomeghost"], a[href="/vinylghost"]{
+a[href="/ajcheersghost"], a[href="/ajghost"], a[href="/ajsoawesomeghost"], a[href="/applejackfillyghost"], a[href="/bonghost"], a[href="/dashieposeghost"], a[href="/flutterghost"], a[href="/lyraghost"], a[href="/pinkiefillyghost"], a[href="/pinkieghost"], a[href="/ppsoawesomeghost"], a[href="/raracheeksghost"], a[href="/rarghost"], a[href="/rarisoawesomeghost"], a[href="/rdsoawesomeghost"], a[href="/roseghost"], a[href="/shysoawesomeghost"], a[href="/sweetieghost"], a[href="/twigringhost"], a[href="/twilightfillyghost"], a[href="/twishockedghost"], a[href="/twisoawesomeghost"], a[href="/vinylghost"]{
     display: block;
     clear: none;
     float: left;
@@ -14,24 +14,25 @@ a[href="/ajcheersghost"] {width: 91px; height: 70px; background-position: -5px -
 a[href="/ajghost"] { width: 100px; height: 100px; background-position: -106px -5px;}
 a[href="/ajsoawesomeghost"] { width: 83px; height: 100px; background-position: -216px -5px;}
 a[href="/applejackfillyghost"] { width: 100px; height: 105px; background-position: -309px -5px;}
-a[href="/bonghost"] {width: 100px; height: 113px; background-position: -5px -120px;}
-a[href="/flutterghost"] { width: 100px; height: 85px; background-position: -115px -120px;}
-a[href="/lyraghost"] { width: 100px; height: 114px; background-position: -225px -120px;}
-a[href="/pinkiefillyghost"] { width: 112px; height: 105px; background-position: -335px -120px;}
-a[href="/pinkieghost"] { width: 100px; height: 118px; background-position: -115px -235px;}
-a[href="/ppsoawesomeghost"] { width: 96px; height: 100px; background-position: -419px -5px;}
-a[href="/raracheeksghost"] {width: 100px; height: 115px; background-position: -335px -235px;}
-a[href="/rarghost"] { width: 100px; height: 114px; background-position: -5px -360px;}
-a[href="/rarisoawesomeghost"] { width: 98px; height: 100px; background-position: -225px -360px;}
-a[href="/rdsoawesomeghost"] { width: 101px; height: 100px; background-position: -333px -360px;}
-a[href="/roseghost"] { width: 100px; height: 126px; background-position: -525px -5px;}
-a[href="/shysoawesomeghost"] { width: 100px; height: 100px; background-position: -457px -141px;}
-a[href="/sweetieghost"] { width: 100px; height: 96px; background-position: -5px -251px;}
-a[href="/twigringhost"] { width: 90px; height: 91px; background-position: -225px -251px; }
-a[href="/twilightfillyghost"] { width: 100px; height: 105px; background-position: -445px -251px;}
-a[href="/twishockedghost"] { width: 100px; height: 110px; background-position: -115px -366px;}
-a[href="/twisoawesomeghost"] {width: 95px; height: 100px; background-position: -444px -366px; }
-a[href="/vinylghost"] { width: 100px;  height: 95px; background-position: -225px -476px;}
+a[href="/bonghost"] {width: 100px; height: 113px; background-position: -419px -5px;}
+a[href="/dashieposeghost"] {width: 112px; height: 130px; background-position: -5px -128px;}
+a[href="/flutterghost"] { width: 100px; height: 85px; background-position: -127px -128px;}
+a[href="/lyraghost"] { width: 100px; height: 114px; background-position: -237px -128px;}
+a[href="/pinkiefillyghost"] { width: 112px; height: 105px; background-position: -347px -128px;}
+a[href="/pinkieghost"] { width: 100px; height: 118px; background-position: -127px -243px;}
+a[href="/ppsoawesomeghost"] { width: 96px; height: 100px; background-position: -347px -243px;}
+a[href="/raracheeksghost"] {width: 100px; height: 115px; background-position: -5px -353px;}
+a[href="/rarghost"] { width: 100px; height: 114px; background-position: -237px -353px;}
+a[href="/rarisoawesomeghost"] { width: 98px; height: 100px; background-position: -345px -353px;}
+a[href="/rdsoawesomeghost"] { width: 101px; height: 100px; background-position: -529px -5px;}
+a[href="/roseghost"] { width: 100px; height: 126px; background-position: -529px -115px;}
+a[href="/shysoawesomeghost"] { width: 100px; height: 100px; background-position: -455px -251px;}
+a[href="/sweetieghost"] { width: 100px; height: 96px; background-position: -455px -361px;}
+a[href="/twigringhost"] { width: 90px; height: 91px; background-position: -115px -467px; }
+a[href="/twilightfillyghost"] { width: 100px; height: 105px; background-position: -347px -467px;}
+a[href="/twishockedghost"] { width: 100px; height: 110px; background-position: -457px -467px;}
+a[href="/twisoawesomeghost"] {width: 95px; height: 100px; background-position: -640px -5px; }
+a[href="/vinylghost"] { width: 100px;  height: 95px; background-position: -639px -115px;}
 
 /* 100 by 200 */
 
@@ -100,7 +101,7 @@ a[href="/twieyesghost"] {width: 132px; height: 150px; background-position: -427p
 a[href="/twiworriedghost"] { width: 123px; height: 150px; background-position: -399px -325px;}
 
 /* 150 by 150 */
-a[href="/abpoutghost"], a[href="/ajpoutghost"], [href="/ajsaluteghost"], a[href="/bendoverghost"], a[href="/fspoutghost"], a[href="/pppoutghost"], a[href="/rarpoutghost"], a[href="/rdpoutghost"], a[href="/sbpoutghost"], a[href="/scootpoutghost"], a[href="/twipoutghost"]{
+a[href="/abpoutghost"], a[href="/ajpoutghost"], [href="/ajsaluteghost"], a[href="/bendoverghost"], a[href="/dashiehugghost"], a[href="/fspoutghost"], a[href="/pppoutghost"], a[href="/rarpoutghost"], a[href="/rdpoutghost"], a[href="/sbpoutghost"], a[href="/scootpoutghost"], a[href="/twipoutghost"]{
    display: block;
    clear: none;
    float: left;
@@ -113,13 +114,14 @@ a[href="/abpoutghost"] {width: 159px; height: 150px; background-position: -5px -
 a[href="/ajpoutghost"] {width: 123px; height: 150px; background-position: -174px -5px;}
 a[href="/ajsaluteghost"] {width: 149px; height: 150px; background-position: -307px -5px;}
 a[href="/bendoverghost"] { width: 152px; height: 157px; background-position: -5px -165px;}
-a[href="/fspoutghost"] { width: 173px; height: 150px; background-position: -167px -165px;}
-a[href="/pppoutghost"] {width: 141px; height: 150px; background-position: -350px -165px;}
-a[href="/rarpoutghost"] {width: 154px; height: 150px; background-position: -167px -325px;}
-a[href="/rdpoutghost"] {width: 158px; height: 150px; background-position: -331px -325px;}
-a[href="/sbpoutghost"] {width: 159px; height: 150px; background-position: -466px -5px;}
-a[href="/scootpoutghost"] { width: 159px; height: 150px; background-position: -501px -165px;}
-a[href="/twipoutghost"] { width: 150px; height: 150px; background-position: -499px -325px;}
+a[href="/dashiehugghost"] { width: 175px; height: 175px; background-position: -167px -165px;}
+a[href="/fspoutghost"] { width: 173px; height: 150px; background-position: -352px -165px;}
+a[href="/pppoutghost"] {width: 141px; height: 150px; background-position: -352px -325px;}
+a[href="/rarpoutghost"] {width: 154px; height: 150px; background-position: -466px -5px;}
+a[href="/rdpoutghost"] {width: 158px; height: 150px; background-position: -535px -165px;}
+a[href="/sbpoutghost"] {width: 159px; height: 150px; background-position: -503px -325px;}
+a[href="/scootpoutghost"] { width: 159px; height: 150px; background-position: -5px -485px;}
+a[href="/twipoutghost"] { width: 150px; height: 150px; background-position: -174px -485px;}
 
 /* 200 by 150 */
 a[href="/ajsupghost"], a[href="/bonsupghost"], a[href="/derpysaluteghost"], a[href="/fluttershysaluteghost"], a[href="/fluttersupghost"], a[href="/lunaghost"], a[href="/lyrasupghost"], a[href="/ppsupghost"], a[href="/tavisupghost"], a[href="/tiaghost"], a[href="/twisaluteghost"], a[href="/twisupghost"], a[href="/vinylsupghost"] {   
